# rag-qa-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/services/: chunking_service.py  embedding_service.py  evaluation_service.py  ingestion_service.py  llm_service.py  rag_pipeline.py  reranker_service.py  vector_store.py
data/raw/: knowledge_base.txt  tech_docs.json
scripts/: evaluate_retrieval.py  ingest_sample_data.py
tests/: conftest.py  test_api.py  test_chunking.py
